# wheel-of-fortune

./: .gitattributes  .gitignore  Cargo.toml  Trunk.toml  index.html  readme.md  tailwind.config.js
docs/: index.html  tailwind-14e1785f4e236a6b.css  tailwind-43c55b852be093ad.css  tailwind-61528a451aa1fbe4.css  tailwind-7b4f49e6f34a373d.css  tailwind-873ad3a96f3ecb90.css  tailwind-8dc1f9831d93b3bd.css  tailwind-b72192a4250ffebb.css  tailwind-c9be5718c47b05b4.css  wheel_of_fortune-10cfe82ae25fe9db.js  wheel_of_fortune-10cfe82ae25fe9db_bg.wasm  wheel_of_fortune-42e54a8c1e74f294.js  wheel_of_fortune-42e54a8c1e74f294_bg.wasm  wheel_of_fortune-594bb0080de3b1df.js  wheel_of_fortune-594bb0080de3b1df_bg.wasm  wheel_of_fortune-653d7eaff5542a4a.js  wheel_of_fortune-653d7eaff5542a4a_bg.wasm  wheel_of_fortune-7ebf305a72491d36.js  wheel_of_fortune-7ebf305a72491d36_bg.wasm  wheel_of_fortune-af1b99ada4e138d1.js  wheel_of_fortune-af1b99ada4e138d1_bg.wasm  wheel_of_fortune-d9c90883e7ea2541.js  wheel_of_fortune-d9c90883e7ea2541_bg.wasm  wheel_of_fortune-f72997179b1afd8b.js  wheel_of_fortune-f72997179b1afd8b_bg.wasm
src/: main.rs  wheel_of_fortune.rs
src/components/: app.rs  mod.rs  name_list.rs  wheel_of_fortune.rs
